2008-08-27  Paul Brook  <paul@codesourcery.com>

	* config.gcc: Loosen checks for arm uclinux eabi targets.

2008-08-27  Paul Brook  <paul@codesourcery.com>

	* config/arm/t-arm-coff (LIB1ASMFUNCS): Add missing undescrore on
	_clzsi2.
	* config/arm/t-linux (LIB1ASMFUNCS): Ditto.

2008-08-26  Douglas Gregor  <doug.gregor@gmail.com>

	* c-common.c (do_switch_warnings): Look through the CONST_DECLs in
	the enumerators of an ENUMERAL_TYPE.
	* dbxout.c (dbxout_type): Ditto.

2008-08-26  Andrew Pinski  <andrew_pinski@playstation.sony.com>

	PR rtl-opt/37219
	* fwprop.c (fwprop): Check that the loop_father is the outer loop.
	(fwprop_addr): Check that the loop_father is not the outer loop.

2008-08-26  Paul Brook  <paul@codesourcery.com>

	* config/arm/vfp.md: Document fmul{s,d} and fmac{s,d} types.
	Remove documentation entry for fmul type.
	Use fmuls to annotate single-precision multiplication patterns,
	fmuld to annotate double-precision multiplication patterns,
	fmacs to annotate single-precision multiply-accumulate patterns
	and fmacd to annotate double-precision multiply-accumulate patterns.
	* config/arm/vfp11.md: Update reservations accordingly.
	* config/arm/arm.md: Note that certain values of the "type"
	attribute are documented in vfp.md.
	* config/arm/arm1020e.md: Remove out of date duplicate comment.
	(v10_cvt): Use new fmul types.

2008-08-26  Paul Brook   <paul@codesourcery.com>

	* config/arm/vfp.md: Move pipeline description for VFP11 to...
	* config/arm/vfp11.md: ...here.  New.
	* config/arm/arm.md: Include vfp11.md.

2008-08-26  Hans-Peter Nilsson  <hp@axis.com>

	* opts.c (decode_options) [!IRA_COVER_CLASSES]: Add missing
	parameter to inform call.

2008-08-26  Jeff Law  <law@redhat.com>

	* mn10300.md (movqi, movhi): Split i->d*a case into two cases to
	avoid the possibility of getting DATA_OR_ADDRESS_REGS as the
	preferred class when copying a constant into a partial word register.

2008-08-26  Ben Elliston  <bje@au.ibm.com>
