@@ -1,3 +1,8 @@
+2008-08-27  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/35321
+	* g++.dg/parse/offsetof8.C: New.
+
 2008-08-27  Manuel Lopez-Ibanez  <manu@gcc.gnu.org>
 
 	PR c++/17880
